# mail-integration

./: .coveragerc  .env.sample  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.qa  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.qa.yaml  docker-compose.yaml  entrypoint.sh  mail_helper.py  main.py  pyproject.toml  pytest.ini
config/development/: app_config.json  email_rules.json  msg_config.json
configuration/: .env.sample
configuration/development/: .env.app  .env.app.sample  .env.test  .env.test.sample  app_config.json  email_rules.json  logging.conf
configuration/production/: .env.app  .env.app.sample  .env.test  .env.test.sample  email_rules.json  logging.conf
configuration/qa/: .env.app  .env.app.sample  .env.test  .env.test.sample  app_config.json
database/sqls/: init.sql
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.qa
images/: mail_engine.xml  rule_engine.xml
src/: __init__.py  app_config.py  cli.py  config.py  db_dao.py  db_init.py  env_config.py  gmail_api.py  initialize.py  mail_connection.py  mail_data.py  mail_data_builder.py  mail_engine.py  mail_reader.py  query_builder.py  rule_data.py  rule_engine.py  rule_parser.py
src/api/: api_request.py  http_status.py
src/api_engine/: api_auth.py  api_builder.py  api_engine.py  api_request.py
src/auth/: auth.py  connection.py  gmail_auth.py
src/auth_engine/: api_auth.py  auth_validation.py
src/db/: db_dao.py
tests/: conftest.py
utils/: datetime_helper.py  file_helper.py  gen_credential_data.py  json_reader.py
(+39 files in other folders)
